external-crates/move/crates/move-compiler/tests/move_check/typing/vector_void.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
error[E04004]: expected a single non-reference type
  ┌─ tests/move_check/typing/vector_void.move:3:18
  │
3 │         let _v = vector[{ abort 0 }];
  │                  ^^^^^^^^^^^^^^^^^^^
  │                  │        │
  │                  │        Could not find a concrete type for this expression
  │                  Invalid 'vector' type
